Fix for #1580 Campaigns - layout breaking

--- a/wp-content/themes/cae/assets/css/main.css
+++ b/wp-content/themes/cae/assets/css/main.css
@@ -3705,9 +3705,10 @@ article[class*="entry-single"] {
   width: 100%;
   height: 260px;
   margin: 0 0 15px 0; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .campaign-grid li {
       width: 267px;
+      max-width: 32%;
       height: 260px;
       display: inline-block;
       margin: 0 5px 5px 0;
