--- a/wp-content/themes/cae/assets/scss/partials/_campaign-grid.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_campaign-grid.scss
@@ -5,8 +5,9 @@
 		width: 100%;
 		height:260px;
 		margin:0 0 15px 0;
-		@media (min-width:$screen-sm-min) {
+		@media (min-width:$screen-md-min) {
 			width:267px;
+			max-width:32%;
 			height:260px;
 			display: inline-block;
 			margin:0 5px 5px 0;
